argocd/media-server/maintainerr/manifests/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: maintainerr
  name: maintainerr
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: maintainerr
  template:
    metadata:
      labels:
        app: maintainerr
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      restartPolicy: Always
      containers:
        - image: harbor.yanello.net/ghcr/maintainerr/maintainerr:3.28.0@sha256:c39df453c05b174a6cb0870b4a50acdc844b179da7518e74a847c3e7aaf7c0e7
          imagePullPolicy: IfNotPresent
          name: maintainerr
          ports:
            - containerPort: 6246
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 6246
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 6246
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 1Gi
          volumeMounts:
            - mountPath: /opt/data
              name: maintainerr-config
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: maintainerr-config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-ssd-nfs
        resources:
          requests:
            storage: 100Mi
