argocd/media-server/maintainerr/manifests/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Maintainerr
    gethomepage.dev/icon: sh-maintainerr
    gethomepage.dev/description: "Maintainerr makes managing your media easy."
    gethomepage.dev/pod-selector: app=maintainerr
  labels:
    app.kubernetes.io/instance: maintainerr-app
  name: maintainerr-http-route
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - maintainerr.yanello.net
  rules:
    - backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
